main/default/objects/Project_Task__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 - Critical</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
            <value>
                <fullName>2 - Normal</fullName>
            </value>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
                <isActive>false</isActive>
                <label>Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
                <isActive>false</isActive>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <isActive>false</isActive>
                <label>Low</label>
            </value>
            <value>
                <fullName>Normal</fullName>
                <isActive>false</isActive>
                <label>Normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>