main/default/objects/Project_Task__c/fields/Sign_off_Technical_Review__c.field-meta.xml
<CustomField>
    <fullName>Sign_off_Technical_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign-off (Technical Review)</label>
    <type>Checkbox</type>
</CustomField>