main/default/objects/Project_Task__c/fields/Sign_off_UAT__c.field-meta.xml
<CustomField>
    <fullName>Sign_off_UAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign-off (UAT)</label>
    <type>Checkbox</type>
</CustomField>