main/default/objects/Project_Task__c/fields/Sign_off_UI_UX__c.field-meta.xml
<CustomField>
    <fullName>Sign_off_UI_UX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign-off (UI/UX)</label>
    <type>Checkbox</type>
</CustomField>