main/default/objects/Project_Task__c/fields/SIT_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>SIT_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIT Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Tasks (SIT Assigned To)</relationshipLabel>
    <relationshipName>Project_Tasks5</relationshipName>
    <type>Lookup</type>
</CustomField>