main/default/objects/Project_Task__c/fields/Site_Values__c.field-meta.xml
<CustomField>
    <fullName>Site_Values__c</fullName>
    <formula>Requirements_Addressed__r.Site_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Values</label>
    <type>Text</type>
</CustomField>