main/default/objects/Project_Task__c/fields/Solution_Capture__c.field-meta.xml
<CustomField>
    <fullName>Solution_Capture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Capture</label>
    <referenceTo>Solution_Capture__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>