main/default/objects/Project_Task__c/fields/Source_Story__c.field-meta.xml
<CustomField>
    <fullName>Source_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Story</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Source_Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>