main/default/objects/Project_Task__c/fields/SourceCase__c.field-meta.xml
<CustomField>
    <fullName>SourceCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Project Tasks (Source Case)</relationshipLabel>
    <relationshipName>Project_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>