main/default/objects/Project_Task__c/fields/SourceRAID__c.field-meta.xml
<CustomField>
    <fullName>SourceRAID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source RAID</label>
    <referenceTo>Agile_RAID__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>