main/default/objects/Project_Task__c/fields/Story_Status__c.field-meta.xml
<CustomField>
    <fullName>Story_Status__c</fullName>
    <description>Used to identify the status of the parent story</description>
    <formula>TEXT(Source_Story__r.Status__c)</formula>
    <label>Story Status</label>
    <type>Text</type>
</CustomField>