main/default/objects/Project_Task__c/fields/Story_Type__c.field-meta.xml
<CustomField>
    <fullName>Story_Type__c</fullName>
    <description>To identify the type of the Story record type Project Task</description>
    <label>Story Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Functionality</fullName>
            </value>
            <value>
                <fullName>Enhancement to Existing Functionality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>