main/default/objects/Project_Task__c/fields/Target_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Resolution_Date__c</fullName>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>