main/default/objects/Project_Task__c/fields/Technical_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technical_Review_Notes__c</fullName>
    <label>Technical Review Notes</label>
    <type>TextArea</type>
</CustomField>