main/default/objects/Project_Task__c/fields/Test_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Description__c</fullName>
    <label>Test Case Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>