main/default/objects/Project_Task__c/fields/Test_Execution__c.field-meta.xml
<CustomField>
    <fullName>Test_Execution__c</fullName>
    <label>Test Execution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>