main/default/objects/Project_Task__c/fields/Testing_Types__c.field-meta.xml
<CustomField>
    <fullName>Testing_Types__c</fullName>
    <description>Identifies whether the QA task is for full testing, adhoc or other</description>
    <label>Testing Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Integration Testing</fullName>
            </value>
            <value>
                <fullName>UAT Testing</fullName>
            </value>
            <value>
                <fullName>Prod Smoke Testing</fullName>
            </value>
            <value>
                <fullName>Full Testing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>