main/default/objects/Project_Task__c/fields/Type_Values__c.field-meta.xml
<CustomField>
    <fullName>Type_Values__c</fullName>
    <formula>Requirements_Addressed__r.Type_Values__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Values</label>
    <type>Text</type>
</CustomField>