main/default/objects/Project_Task__c/fields/UAT_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>UAT_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UAT Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Tasks (UAT Assigned To)</relationshipLabel>
    <relationshipName>Project_Tasks6</relationshipName>
    <type>Lookup</type>
</CustomField>