main/default/objects/Project_Task__c/fields/UAT_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Due_Date__c</fullName>
    <label>UAT Due Date</label>
    <type>Date</type>
</CustomField>