main/default/objects/Project_Task__c/fields/UAT_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>UAT_Due_Day__c</fullName>
    <formula>UAT_Due_Date__c - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAT Due Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>