main/default/objects/Project_Task__c/fields/Workplan__c.field-meta.xml
<CustomField>
    <fullName>Workplan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workplan</label>
    <referenceTo>Workplan__c</referenceTo>
    <relationshipLabel>Workplan (Project Task)</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>