main/default/objects/Project_Task__c/recordTypes/Dev.recordType-meta.xml
<RecordType>
    <fullName>Dev</fullName>
    <active>true</active>
    <label>Dev</label>
</RecordType>