main/default/objects/Project_Task__c/recordTypes/Functionality.recordType-meta.xml
<RecordType>
    <fullName>Functionality</fullName>
    <active>true</active>
    <label>Functionality</label>
</RecordType>