main/default/objects/Project_Task__c/recordTypes/QA.recordType-meta.xml
<RecordType>
    <fullName>QA</fullName>
    <active>true</active>
    <label>QA</label>
</RecordType>