main/default/objects/Project_Task__c/recordTypes/Template.recordType-meta.xml
<RecordType>
    <fullName>Template</fullName>
    <active>true</active>
    <label>Template</label>
</RecordType>