main/default/objects/Project_Task__c/validationRules/Add_Assigned_Developer.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Assigned_Developer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
RecordType.Name = &apos;Dev&apos;,
RecordType.Name = &apos;Bug&apos;),

OR(
ISPICKVAL(Status__c,&apos;Completed&apos;),
ISPICKVAL(Status__c,&apos;Withdrawn&apos;),
ISPICKVAL(Status__c,&apos;Duplicate&apos;)),

ISBLANK(Assigned_Developer__c))</errorConditionFormula>
    <errorDisplayField>Assigned_Developer__c</errorDisplayField>
    <errorMessage>Add Assigned (Developer)</errorMessage>
</ValidationRule>