main/default/objects/Project_Task__c/validationRules/Add_Estimated_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Estimated_Hours</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
RecordType.Name = &apos;Dev&apos;,
RecordType.Name = &apos;Bug&apos;),

OR(
ISPICKVAL(Status__c,&apos;For TR&apos;),
ISPICKVAL(Status__c,&apos;For QA&apos;),
ISPICKVAL(Status__c,&apos;Completed&apos;),
ISPICKVAL(Status__c,&apos;Withdrawn&apos;),
ISPICKVAL(Status__c,&apos;Duplicate&apos;)),

ISBLANK(Estimated_Hours__c))</errorConditionFormula>
    <errorDisplayField>Estimated_Hours__c</errorDisplayField>
    <errorMessage>Add Estimated Hours for this scope of work</errorMessage>
</ValidationRule>