main/default/objects/Project_Task__c/validationRules/Add_Feature_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Feature_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;Feature&apos;,
ISBLANK(Feature_Code__c))</errorConditionFormula>
    <errorDisplayField>Feature_Code__c</errorDisplayField>
    <errorMessage>Add Feature Code</errorMessage>
</ValidationRule>