main/default/objects/Project_Task__c/validationRules/Add_Final_Design.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Final_Design</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Final_Design__c),
ISPICKVAL(Status__c,&apos;Completed&apos;),
RecordType.Name = &apos;Dev&apos;,
RecordType.Name = &apos;Bug&apos;,
RecordType.Name = &apos;Story&apos;)</errorConditionFormula>
    <errorDisplayField>Final_Design__c</errorDisplayField>
    <errorMessage>Add a value</errorMessage>
</ValidationRule>