main/default/objects/Project_Task__c/validationRules/Add_Functionality_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Functionality_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;Functionality&apos;,
ISBLANK(Functionality_Code__c))</errorConditionFormula>
    <errorDisplayField>Functionality_Code__c</errorDisplayField>
    <errorMessage>Add Functionality Code</errorMessage>
</ValidationRule>