main/default/objects/Project_Task__c/validationRules/Add_Reference_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Reference_Link</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&apos;For TR&apos;),
ISBLANK(Reference_Link__c))</errorConditionFormula>
    <errorDisplayField>Reference_Link__c</errorDisplayField>
    <errorMessage>Add Technical Review Link</errorMessage>
</ValidationRule>