main/default/objects/Project_Task__c/validationRules/Add_Requested_By.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Requested_By</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Requested_By__c),
RecordType.Name = &apos;Bug&apos;,
RecordType.Name = &apos;Dev&apos;,
RecordType.Name = &apos;Story&apos;)</errorConditionFormula>
    <errorDisplayField>Requested_By__c</errorDisplayField>
    <errorMessage>Add a value</errorMessage>
</ValidationRule>