main/default/objects/Project_Task__c/validationRules/Check_Epic_Code_for_Story.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Epic_Code_for_Story</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(RecordType.Name == &apos;Story&apos;, OR(Epic__r.Epic_Code__c == Null,Epic__r.Epic_Code__c == &apos;&apos;), OR(AND(ISCHANGED(Convert_To_Functionality__c), Convert_To_Functionality__c == True),AND(ISCHANGED(Convert_To_Feature__c), Convert_To_Feature__c = True))) , true, false)</errorConditionFormula>
    <errorDisplayField>Epic__c</errorDisplayField>
    <errorMessage>Please make sure that the attached Epic has an Epic Code</errorMessage>
</ValidationRule>