main/default/objects/Project_Task__c/validationRules/Check_Feature_Code_for_Feature_Task.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Feature_Code_for_Feature_Task</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISNEW(),RecordType.Name = &apos;Functionality&apos;,From_Functionality_Button__c = true,Feature__r.Feature_Code__c = null),true,false)</errorConditionFormula>
    <errorMessage>Add a Feature Code</errorMessage>
</ValidationRule>