main/default/objects/Project_Task__c/validationRules/Check_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Project</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(OR(RecordType.Name = &apos;Bug&apos;,RecordType.Name = &apos;Dev&apos;), OR(From_DevQA_Button_Story__c = true, From_DevQA_Button_Functionality__c = true, From_Bug_Button__c= true), OR(Project__c = Null, Project__r.Project_Code__c = Null)),True,False)</errorConditionFormula>
    <errorDisplayField>Project__c</errorDisplayField>
    <errorMessage>Add a Project and ensure it has a Project Code</errorMessage>
</ValidationRule>