main/default/objects/Project_Task__c/validationRules/Check_Project_Task_Logs_when_TR.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Project_Task_Logs_when_TR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Status__c,&apos;For TR&apos;),ISPICKVAL(Status__c,&apos;For Release&apos;)),
OR( RecordType.Name = &apos;Bug&apos;, RecordType.Name = &apos;Dev&apos;),
Actual_Hours__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>AE_End_Date__c</errorDisplayField>
    <errorMessage>Add project task logs before closing this task</errorMessage>
</ValidationRule>