main/default/objects/Project_Task__c/validationRules/Check_Story_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Story_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISPICKVAL(Status__c,&apos;Converted&apos;),OR(AND(ISCHANGED(Convert_To_Feature__c), Convert_To_Functionality__c == True),AND(ISCHANGED(Convert_To_Functionality__c), Convert_To_Feature__c == True))), true, false)</errorConditionFormula>
    <errorMessage>This story can only be converted once.</errorMessage>
</ValidationRule>