main/default/objects/Project_Task__c/validationRules/Epic_Check_For_Story.validationRule-meta.xml
<ValidationRule>
    <fullName>Epic_Check_For_Story</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(RecordType.Name == &apos;Story&apos;, Epic__c == Null, OR(AND(ISCHANGED(Convert_To_Functionality__c), Convert_To_Functionality__c == True),AND(ISCHANGED(Convert_To_Feature__c), Convert_To_Feature__c = True))) , true, false)</errorConditionFormula>
    <errorDisplayField>Epic__c</errorDisplayField>
    <errorMessage>Please add an Epic</errorMessage>
</ValidationRule>