main/default/objects/Project_Task__c/validationRules/Feat_And_FeatCode_Check_For_QAStoryFun.validationRule-meta.xml
<ValidationRule>
    <fullName>Feat_And_FeatCode_Check_For_QAStoryFun</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(OR(RecordType.Name = &apos;Bug&apos;,RecordType.Name = &apos;Dev&apos;), OR(From_DevQA_Button_Story__c = true, From_DevQA_Button_Functionality__c = true, From_Bug_Button__c= true), OR(Feature__c = Null, Feature__r.Feature_Code__c = Null)),True,False)</errorConditionFormula>
    <errorDisplayField>Feature__c</errorDisplayField>
    <errorMessage>Please add a Feature Record or make sure that the Feature Record assigned has a Feature Code</errorMessage>
</ValidationRule>