main/default/objects/Project_Task__c/validationRules/Feature_Code_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Feature_Code_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISNEW(),RecordType.Name = &apos;Functionality&apos;,From_Functionality_Button__c = true,Feature__r.Feature_Code__c = null),true,false)</errorConditionFormula>
    <errorMessage>Please add a Feature Code in the feature record</errorMessage>
</ValidationRule>