main/default/objects/Project_Task__c/validationRules/Is_Status_Detail_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Status_Detail_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Status__c,&apos;Oh-Hold&apos;),
ISPICKVAL(Status__c,&apos;Blocked&apos;),
ISPICKVAL(Status__c,&apos;Withdrawn&apos;)),
ISBLANK(Status_Detail__c))</errorConditionFormula>
    <errorDisplayField>Status_Detail__c</errorDisplayField>
    <errorMessage>Add value</errorMessage>
</ValidationRule>