main/default/objects/Project_Task__c/validationRules/Signoff_Integration.validationRule-meta.xml
<ValidationRule>
    <fullName>Signoff_Integration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;QA&apos;,
ISPICKVAL(Status__c,&apos;QA UAT&apos;),
Sign_off_Integration__c = false)</errorConditionFormula>
    <errorDisplayField>Sign_off_Integration__c</errorDisplayField>
    <errorMessage>Integration Sign-off is not yet given.</errorMessage>
</ValidationRule>