main/default/objects/Project_Task__c/validationRules/Signoff_Smoke.validationRule-meta.xml
<ValidationRule>
    <fullName>Signoff_Smoke</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;QA&apos;,
ISPICKVAL(Status__c,&apos;Pass&apos;),
Sign_off_Smoke__c = false)</errorConditionFormula>
    <errorDisplayField>Sign_off_Smoke__c</errorDisplayField>
    <errorMessage>Smoke sign-off is not yet given.</errorMessage>
</ValidationRule>