main/default/objects/Project_Task__c/validationRules/Signoff_Technical_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Signoff_Technical_Review</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
RecordType.Name = &apos;Dev&apos;,
RecordType.Name = &apos;Bug&apos;
),
Sign_off_Technical_Review__c = false,
ISPICKVAL(Status__c,&apos;Completed&apos;))</errorConditionFormula>
    <errorDisplayField>Sign_off_Technical_Review__c</errorDisplayField>
    <errorMessage>Technical review sign-off is not yet given.</errorMessage>
</ValidationRule>