main/default/objects/Project_Task__c/validationRules/Signoff_UAT.validationRule-meta.xml
<ValidationRule>
    <fullName>Signoff_UAT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;QA&apos;,
ISPICKVAL(Status__c,&apos;QA Smoke&apos;),
Sign_off_UAT__c = false)</errorConditionFormula>
    <errorDisplayField>Sign_off_UAT__c</errorDisplayField>
    <errorMessage>UAT sign-off is not yet given.</errorMessage>
</ValidationRule>