main/default/objects/Project_Task__c/validationRules/Validate_For_Approval_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_For_Approval_Status</fullName>
    <active>true</active>
    <description>Validate if Estimated Hours is populated before changing the status to For Approval</description>
    <errorConditionFormula>AND(
    OR (
      Proposed_Hours__c = 0,
      ISNULL( Proposed_Hours__c ) 
    ),
    RecordType.DeveloperName = &apos;Story&apos;,
    ISPICKVAL(Status__c , &apos;For Approval&apos;),
    ISCHANGED(Status__c )
)</errorConditionFormula>
    <errorMessage>Proposed hours should be populated.</errorMessage>
</ValidationRule>