main/default/objects/Project_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Project__c</columns>
    <columns>Assigned_To_Name__c</columns>
    <columns>Sprint__c</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Navigator</value>
    </filters>
    <label>All</label>
</ListView>