main/default/objects/Project_Task__c/listViews/All_bugs.listView-meta.xml
<ListView>
    <fullName>All_bugs</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Epic__c</columns>
    <columns>Organization__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project_Task__c.Bug</value>
    </filters>
    <label>All bugs</label>
</ListView>